--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "ddgs (>=9.4.3,<10.0.0)",
     "beeai-framework>=0.1.55",
-    "beeai-sdk==0.3.7",
+    "agentstack-sdk==0.4.0-rc1",
 ]
 
 [tool.ruff]
