--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "beeai-agents"
+name = "agentstack-agents"
 version = "0.1.1"
 description = "Add your description here"
 readme = "README.md"
@@ -19,7 +19,7 @@ line-length = 120
 target-version = "py311"
 
 [project.scripts]
-server = "beeai_agents.agent:run"
+server = "agentstack_agents.agent:run"
 
 [build-system]
 requires = ["hatchling"]
